--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#download">Download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+            <a class="nav-link js-scroll-trigger" href="#How It Works">How It Works</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,8 +59,9 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+            <h1 class="mb-5"><img src="img\logo.png" alt="logo" width="65%" /><br><br>Instant cash advances. Pay your bills. Send money to friends and
+            family. Make payments in stores</h1>
+            <a href="#download"><img src="img\csgplay.png" alt="gplay" width="40%"/><img src="img\csapp.png" alt="csapp" width="40%"/></a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -69,7 +70,7 @@
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                  <img src="img/spscreen.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -86,22 +87,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
-          <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
-          <div class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-          </div>
+          <h2 class="section-heading">It's your money. Get it when you need it.</h2>
+          <p>SpotPay is coming to your island. Join our mailing list and we'll keep you posted!</p>
+          <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Sign Up</a>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="features" id="features">
+  <section class="How It Works" id="How It Works">
     <div class="container">
       <div class="section-heading text-center">
         <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <p class="text-muted">Let SpotPay make life easier</p>
         <hr>
       </div>
       <div class="row">
@@ -111,7 +109,7 @@
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                  <img src="img/billpay.jpg" class="img-fluid" alt="" style="width:315px;height:543px;">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -125,36 +123,46 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <i class="icon-wallet text-primary"></i>
+                  <h3>Instant Cash Advance</h3>
+                  <p class="text-muted">No Money? No Problem.  No more awkward money lending conversations with friends and family. Borrow from yourself! Instant cash advances allow you to borrow from your paycheque for hours you’ve already worked. Get the cash you need within seconds.</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <i class="icon-paper-plane text-primary"></i>
+                  <h3>Send Money</h3>
+                  <p class="text-muted">No more hefty fees or annoying paperwork. Send money from your Spot Pay balance or linked bank account to friends, family, or any Spot Pay user with the tap of a button.  </p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <i class="icon-envelope text-primary"></i>
+                  <h3>Pay Bills</h3>
+                  <p class="text-muted"> Skip the line and pay your bills right from your smartphone.</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <i class="icon-screen-smartphone text-primary"></i>
+                  <h3>Make Purchases in Stores</h3>
+                  <p class="text-muted">Spot Pay uses NFC and QR technology to allow contactless payments at select merchant stores. No need for a debit card, a paper cheque or even cash. Spot Pay is the safer, more convenient way to pay</p>
                 </div>
               </div>
+              <div class="col-lg-6">
+                <div class="feature-item">
+                  <i class="icon-arrow-right text-primary"></i>
+                  <h3>Cash Cheques</h3>
+                  <p class="text-muted">Need to cash a paper cheque without the long bank line? We’ve got you! Our mobile cheque cashing feature allows you to deposit cheques without ever having to leave your couch.</p>
             </div>
           </div>
+          <div class="col-lg-6">
+                <div class="feature-item">
+                  <i class="icon-calculator text-primary"></i>
+                  <h3>Bank Transfers</h3>
+                  <p class="text-muted">Our instant bank transfers allow you to transfer any funds available in you Spot Pay account to a linked bank account. </p>
         </div>
       </div>
     </div>
@@ -163,7 +171,7 @@
   <section class="cta">
     <div class="cta-content">
       <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
+        <h2>Take Control of Your Money</h2>
         <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
       </div>
     </div>
@@ -172,9 +180,60 @@
 
   <section class="contact bg-primary" id="contact">
     <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
+      <h2>We're here to help!</h2>
+      <form name="htmlform" method="post" action="html_form_send.php">
+<table width="450px">
+</tr>
+<tr>
+ <td valign="top">
+  <label for="first_name">First Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+ 
+<tr>
+ <td valign="top"">
+  <label for="last_name">Last Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="last_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+ 
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+ 
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <input type="submit" value="Submit"> 
+ </td>
+</tr>
+</table>
+</form>
       <ul class="list-inline list-social">
         <li class="list-inline-item social-twitter">
           <a href="#">
@@ -186,24 +245,19 @@
             <i class="fab fa-facebook-f"></i>
           </a>
         </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
-          </a>
-        </li>
       </ul>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; Your Website 2019. All Rights Reserved.</p>
+      <p>&copy; Spot-payments.com 2019. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="#">Privacy</a>
+          <a href="https://app.termly.io/document/privacy-policy/e56690dd-20b4-415f-90fd-c4870af52f79">Privacy</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">Terms</a>
+          <a href="https://app.termly.io/document/terms-of-use-for-website/b8c06f4c-82cd-4b92-9b22-0350920f3a71">Terms</a>
         </li>
         <li class="list-inline-item">
           <a href="#">FAQ</a>
